# lullgo-n

./: CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.c
main/Camera/: camera.c  camera.h  camera_config.h
main/Serial/: serial.c  serial.h  serial_config.h
main/Wifi/: wifi.c  wifi_config.h
